# langserve-fork01

operator/: Makefile  PROJECT  go.mod  ls.yaml  main.go
operator/api/v1alpha1/: groupversion_info.go  langserve_types.go  zz_generated.deepcopy.go
operator/config/crd/: kustomization.yaml
operator/config/crd/bases/: server.smith.langchain.com_langserves.yaml
operator/config/crd/patches/: cainjection_in_langserves.yaml  webhook_in_langserves.yaml
operator/config/rbac/: langserve_editor_role.yaml  langserve_viewer_role.yaml  role.yaml
operator/config/samples/: kustomization.yaml  server_v1alpha1_langserve.yaml
operator/container/: Dockerfile  Makefile  client.ipynb  cluster.yaml
operator/container/src/: README.md  pyproject.toml  server.py
operator/controllers/: langserve_controller.go  suite_test.go
