[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["Philip Norman <philipnrmn@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11"
uvicorn = "^0.23.2"
sse-starlette = "^1.6.5"
openai = "^0.28.1"
langserve = "^0.0.7"
langchain = "^0.0.312"
fastapi = "^0.103.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
